<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/visit_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile_image"
            android:layout_marginTop="30dp"
            app:civ_border_color="@color/green"
            app:civ_border_width="5dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginStart="10dp"
                android:text="@string/profile_hello"
                android:textSize="28sp"
                android:textColor="@color/dark_green_text"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:text="@string/profile_name"
                android:textSize="28sp"
                android:textColor="@color/dark_green_text"/>
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/impact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="30dp"
        android:text="@string/total_impact"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_people"
            android:layout_gravity="start"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/text_green"
            app:contentPadding="16dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/people_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/people_number"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/people_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/profile_people"
                    android:textColor="@color/green" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_water"
            android:layout_width="170dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/text_green"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/water_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/water_number"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/water_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/profile_water"
                    android:textColor="@color/green" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:background="@drawable/round_btn"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:background="@drawable/round_btn"
        android:layout_marginTop="10dp"/>
</LinearLayout>

