<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/listing_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/listingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/listing_image_view"
            android:text="@string/listing_title"
            android:textColor="@color/dark_green_text"
            android:textSize="22sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/listing_profile_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/listingTitle"
            android:layout_toEndOf="@id/listing_image_view"
            android:cropToPadding="true"
            android:src="@drawable/profile_image"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/username_listing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listingTitle"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/listing_profile_image"
            android:text="@string/username"
            android:textColor="@color/dark_green_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/expirationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_listing"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/listingDate"
            android:layout_toEndOf="@id/listing_image_view"
            android:text="@string/expiration_date"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/listingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_listing"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:text="@string/listing_date"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>