<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:gravity="center"
    android:layout_marginBottom="70dp"
    android:id="@+id/linearLayoutListing"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".AddListingFragment">


        <ImageView
            android:id="@+id/listing_image_view"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_image_listing"
            />

        <EditText
            android:id="@+id/itemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_add_box_24"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/item_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <EditText
            android:id="@+id/itemExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/item_expiration_hint"
            android:importantForAutofill="no"
            android:padding="16dp"
            android:focusable="true"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:clickable="true"/>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_gravity="end"
            android:background="@drawable/round_btn"
            android:text="@string/submit_listing_btn" />

</LinearLayout>