<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/msg_toolbar"
        layout="@layout/toolbar_layout">
    </include>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_profile_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="@color/green"
        app:civ_border_width="5dp" />

    <EditText
        android:id="@+id/set_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_image"
        android:inputType="textMultiLine"
        android:hint="@string/username"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:background="@drawable/round_border"
        android:drawablePadding="4dp"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/set_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_user_name"
        android:inputType="textMultiLine"
        android:hint="@string/set_address"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:background="@drawable/round_border"
        android:drawablePadding="4dp"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/update_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_address"
        android:text="@string/settings_button"
        android:background="@drawable/round_btn"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

</RelativeLayout>